perf: 나머지 리스트 페이지 N+1 제거 + reorder 전체조회 제거 + open-in-view 정리
이전 회원 목록 N+1 수정과 동일한 문제가 다른 리스트 엔드포인트에도 있는지
전수 조사(서비스 19개 전체) 후, 근거 있는 것만 반영.

JOIN FETCH로 지연로딩 N+1 제거 (모두 ManyToOne 단건 연관관계라 페이지네이션과
충돌 없음 — OneToMany 컬렉션 fetch join은 페이지네이션과 충돌하므로 사용 안 함):
- SeriesRepository.searchSeries/findAllOrderedForSort: member
- PhotoRepository.searchPhotos/findAllOrderedForSort: member
- PortfolioRepository.searchPortfolios: member
- InquiryRepository.searchInquiries: receiver
- ReportRepository.searchReports: reporter (탈퇴 회원 대응 위해 LEFT JOIN)
- VerificationRequestRepository.searchVerifications: member

컬렉션 크기 지연조회는 회원 카운트 수정 때와 같은 배치 GROUP BY 패턴 적용:
- SeriesPhotoRepository.countBySeriesIdIn: AdminSeriesDto.photoCount
  (AdminSeriesService.getSeries/getSeriesForSort 둘 다 적용, 후자는 페이지네이션
  없이 전체 조회라 원래는 더 심각한 N+1이었음)
- PortfolioItemRepository.countByPortfolioIdInGroupByType: AdminPortfolioDto의
  photoCount/seriesCount (PORTFOLIO ITEM을 PHOTO/SERIES로 GROUP BY)

AdminSortService.reorderPhotos/reorderSeries: 드래그 정렬 저장 시 대상 몇 건
때문에 전체 테이블을 findAll()로 읽어오던 것을 findAllById(제출된 id 목록)로
축소.

spring.jpa.open-in-view: dev(application.properties)에도 명시적으로 false
설정 — prod는 이미 false였음. 모든 DTO가 @Transactional 서비스 메서드 안에서
조립되는 것을 확인해 view 계층 지연로딩 의존이 없음을 검증 후 반영(부팅 시
뜨던 경고 제거 목적, 동작 변화 없음).

조사했으나 반영 안 한 것(근거 부족):
- Booking: findByShootDate/findByShootDateBetween/findWithFilters 모두 이미
  JOIN FETCH photographer/client 적용돼 있어 수정 불필요했음.
- HikariCP/배치 설정: prod에 이미 합리적으로 설정돼 있음(pool size 3,
  batch_size 10, order_inserts/updates true) — 새로 튜닝할 근거 없음.
- AdminStatsService: 서로 다른 테이블에 대한 독립적인 COUNT 7개라 하나의
  쿼리로 합칠 수 없음 — 정상.

검증: ./gradlew build(테스트 포함) 통과. 백엔드 기동 후 series/portfolio/
photo/inquiry/report/verification 목록과 sort/photos, sort/series
(GET+PUT reorder) 전부 curl로 응답 확인. SQL 로그에서 findAllOrderedForSort()
호출 시 LEFT JOIN 쿼리 1개 + 배치 GROUP BY 쿼리 1개만 실행되고(이전이라면
시리즈 8개 × 지연로딩 2개 = 16개 추가 쿼리였을 것) 개별 지연로딩 쿼리가
사라진 것을 직접 확인.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude